2008-08-08  Ryan Lortie  <desrt@desrt.ca>

	Fix 'fail' markup test cases to -not- be valid XML 1.1.

	* tests/markups/fail-32.gmarkup: change &#x10; to &#x0; since the
	former is no longer a failure.

2008-08-08  Ryan Lortie  <desrt@desrt.ca>

	Bug 546876 - Modify GMarkup parser to accept &#x1; .. &#x1f;

	* glib/gmarkup.c: previously the parser only accepted character
	references for \t \n and \r (as per XML 1.0); now it accepts all
	of &#x1; .. &#x1f;.

2008-08-07  Tor Lillqvist  <tml@novell.com>

	* configure.in: Output comment clarifying GPid semantics to
	glibconfig.h.

	* glibconfig.h.win32.in: Ditto here.

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	Bug 546329 – API docs for g_utf8_normalize() are incorrect

	* glib/gunidecomp.c: Remove inaccurate information about
	g_utf8_collate() from g_utf8_normalize() docs.
	Pointed out by Sven Neumann.

2008-08-04  Tor Lillqvist  <tml@novell.com>

	* glibconfig.h.win32.in: Make the union _GSystemThread::data array
	8 bytes on Win64. Not that it matters as the union contains a
	pointer also anyway, but for equivalence with the configure-
	generated glibconfig.h

2008-08-04  Tor Lillqvist  <tml@novell.com>

	* glib/gmain.c (g_get_current_time): MSDN says: "Do not cast a
	pointer to a FILETIME structure to either a LARGE_INTEGER* or
	__int64* value because it can cause alignment faults on 64-bit
	Windows." So don't do that then. Indeed the code did work randomly
	on Win64 when compiled with optimisation.

2008-08-04  Tor Lillqvist  <tml@novell.com>

	* glib/giowin32.c
	* glib/gmain.c
	* glib/gspawn-win32.c
	* glib/gspawn-win32-helper.c: Change gssize casts introduced on
	2008-07-28 to gintptr casts now that we have that. gssize is as
	such the same as gintptr on both 32- and 64-bit Windows, but the
	gintptr name indicates that it is used to hold pointers, i.e. also
	HANDLEs.

	* tests/testglib.c: Avoid warning on Win64 by using gintptr cast
	instead if long cast.

2008-08-04  Matthias Clasen  <mclasen@redhat.com>
